# regulation-check

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
data/: sample_input.json
rules/2025-09-01/: prohibited_substances.json  restricted_substances.json
rules/2026-05-01/: allowed_colorants.json  allowed_preservatives.json  prohibited_substances.json  restricted_substances.json
scripts/: parse_annex_ii_from_eurlex_txt.py  parse_annex_iii_from_eurlex_html.py
src/regulation_check/: evaluator.py  loader.py  main.py  models.py  rule_engine.py
tests/: test_evaluator.py  test_loader.py  test_models.py  test_parse_annex_ii_from_eurlex_txt.py  test_parse_annex_iii_from_eurlex_html.py  test_rule_engine.py
